Fix button margin on mobile

--- a/core/sass/pages/_landing-page.scss
+++ b/core/sass/pages/_landing-page.scss
@@ -50,6 +50,12 @@
       margin-top: 45px;
       margin-bottom: 45px;
     }
+
+    .study-visit-cta-section {
+      .button-arrow {
+        margin-bottom: 15px;
+      }
+    }
   }
 }
 
